favorites games & yml fix &
